# frc2025

./: .gitignore  README.md  config.py  constants.py  pyproject.toml  robot.py  robotcontainer.py
.devcontainer/: devcontainer.json
deploy/pathplanner/: settings.json
deploy/pathplanner/autos/: barge park (5pts).auto  barge score (5pts).auto  main auto.auto
deploy/pathplanner/paths/: barge park (5pts).path  barge score (5pts).path  deposit preload algae.path  get coral.path
src/: constants.py  robotcontainer.py
src/commands/: driver_assist.py
src/subsystems/: arm.py  drive.py  odometry.py  vision.py
